v2: using langchain for multi_task in one query

--- a/mcp-client/requirements.txt
+++ b/mcp-client/requirements.txt
@@ -24,3 +24,9 @@ pytest-asyncio>=0.21.0
 
 # 日志 (可选)
 structlog>=23.0.0
+
+# LangChain集成
+langchain-mcp-adapters
+langgraph
+langchain-anthropic
+langchain-core
