--- a/mcp-server/requirements.txt
+++ b/mcp-server/requirements.txt
@@ -1,2 +1,28 @@
+# 核心 MCP 库
 mcp>=1.0.0
+# 配置文件支持
 PyYAML>=6.0
+
+# 音频处理依赖 (audio_slicer server)
+librosa>=0.10.0
+pydub>=0.25.0
+soundfile>=0.12.0
+numpy>=1.21.0
+numba>=0.56.0
+
+# Office文档处理依赖 (filesystem server)
+pypdf>=3.0.0
+python-docx>=0.8.11
+python-pptx>=0.6.21
+
+# Web服务相关 (FastMCP servers)
+fastapi>=0.100.0
+uvicorn>=0.23.0
+requests>=2.31.0
+httpx>=0.24.0
+
+# FRP API服务器依赖
+flask>=2.3.0
+
+# 其他实用库
+pydantic>=2.0.0
